--- a/homepages.html
+++ b/homepages.html
@@ -383,6 +383,9 @@
                     <li><a href="http://www-math.mit.edu/~poonen/">Bjorn Poonen</a></li>
                     <li><a href="http://www-users.math.umn.edu/~garrett/">Paul Garrett</a></li>
                     <li><a href="http://people.math.gatech.edu/~kwickelgren3/">Kirsten Wickelgren</a></li>
+                    <li><a href="https://pages.uoregon.edu/njp/">Nicholas Proudfoot</a></li>
+                    <li><a href="https://www.mit.edu/~fengt/index.html">Tony Feng</a></li>
+
                 </ul>
                 <dl>
                     <dt><a onclick="openShutManager(this,'Sil',false,'※','>')">> </a>
@@ -441,6 +444,7 @@
                         <li><a href="http://www.ub.edu/topologia/gutierrez/index.html">Javier J. Gutiérrez</a></li>
                         <li><a href="http://math.uchicago.edu/~amathew/">Akhil Mathew</a></li>
                         <li><a href="https://faculty.math.illinois.edu/~rezk/526-fal16/math-526-fal16.html">Charles Rezk</a></li>
+                        <li><a href="https://folk.ntnu.no/gereonq/index.html">Gereon Quick</a></li>
                     </ul>
 
                     <li><a href="https://math.berkeley.edu/~alanw/">Alan Weinstein</a>：Poisson Geometry</li>
