--- a/recommend.html
+++ b/recommend.html
@@ -45,7 +45,8 @@
                 <!--<li><a href="http://sci-hub.io/">Sci-hub</a></li>-->
                 <li><a href="https://arxiv.org/archive/math">arxiv</a></li>
                 <li><a href="https://zbmath.org/">zbmath:纯数数据库？</a></li>
-                <li><a href="http://archive.numdam.org/">Numdam:法国文献</a></li>
+                <li><a href="http://archive.numdam.org/">Numdam</a>:法国文献</li>
+                <li><a href="https://gallica.bnf.fr/accueil/en/content/accueil-en?mode=desktop"></a>:法式图书馆</li>
                 <li><a href="https://www.sciencedirect.com/">sciencedirect</a>（各科的文章、教材）</li>
                 <li><a href="https://www.mathunion.org/icm/proceedings">ICM</a>(寻找survey的某种方式)</li>
             </ul>
@@ -71,6 +72,7 @@
                 <li><a href="https://superficie.info/">代数曲面、Grassman流形、Fano簇</a></li>
                 <li><a href="https://www.jgibson.id.au/lievis/">Lie代数相关</a></li>
                 <li><a href="http://www.grdb.co.uk/forms/k3">K3曲面</a></li>
+                <li><a href="http://smf.compositio.nl/">Siegel模形式</a>(of deg 2 and 3)</li>
 
 
 
@@ -100,6 +102,7 @@
             <ul>
                 <li><a href="https://100audio.com/sound/100audio_editor/">在线音频编辑器</a></li>
                 <li><a href="https://gchq.github.io/CyberChef/">码农常用工具</a></li>
+                <li><a href="https://www.latexlive.com/##">在线latex编辑器</a></li>
                 <li><a href="https://q.uiver.app/">quiver</a> and <a href="https://tikzcd.yichuanshen.de/">tikzcd-editor</a></li>
                 <li><a href="https://tikzit.github.io/">tikzIT</a>:tikz画图脚本</li>
                 <!--请不要在这里再添加tikz,转移至Github中的code.tex-->
