--- a/recommend.html
+++ b/recommend.html
@@ -46,7 +46,7 @@
                 <li><a href="https://arxiv.org/archive/math">arxiv</a></li>
                 <li><a href="https://zbmath.org/">zbmath:纯数数据库？</a></li>
                 <li><a href="http://archive.numdam.org/">Numdam</a>:法国文献</li>
-                <li><a href="https://gallica.bnf.fr/accueil/en/content/accueil-en?mode=desktop"></a>:法式图书馆</li>
+                <li><a href="https://gallica.bnf.fr/accueil/en/content/accueil-en?mode=desktop">gallica</a>:法国国家数字图书馆</li>
                 <li><a href="https://www.sciencedirect.com/">sciencedirect</a>（各科的文章、教材）</li>
                 <li><a href="https://www.mathunion.org/icm/proceedings">ICM</a>(寻找survey的某种方式)</li>
             </ul>
