--- a/recommend.html
+++ b/recommend.html
@@ -73,6 +73,7 @@
                 <li><a href="https://www.jgibson.id.au/lievis/">Lie代数相关</a></li>
                 <li><a href="http://www.grdb.co.uk/forms/k3">K3曲面</a></li>
                 <li><a href="http://smf.compositio.nl/">Siegel模形式</a>(of deg 2 and 3)</li>
+                <li><a href="https://web.math.pmf.unizg.hr/~duje/">高秩椭圆曲线记录</a></li>
 
 
 
