--- a/recommend.html
+++ b/recommend.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-cn">
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
@@ -40,9 +40,8 @@
                 <li><a href="http://libgen.rs/">Library Genesis </a>
                     <!--Current alias domains are libgen.rs, libgen.is, libgen.st. Update your bookmarks!-->
                 </li>
-                <!--<li><a href="http://www.hejizhan.com/html/search/">万千合集站</a></li>-->
                 <li><a href="https://link.springer.com">Springer书籍</a></li>
-                <!--<li><a href="http://sci-hub.io/">Sci-hub</a></li>-->
+                <li><a href="https://sci-hub.mksa.top/">Sci-hub</a>(通过Doi)</li>
                 <li><a href="https://arxiv.org/archive/math">arxiv</a></li>
                 <li><a href="https://zbmath.org/">zbmath:纯数数据库？</a></li>
                 <li><a href="http://archive.numdam.org/">Numdam</a>:法国文献</li>
