--- a/recommend.html
+++ b/recommend.html
@@ -99,6 +99,7 @@
                 <li><a href="https://www.gap-system.org/index.html">GAP</a>:群，程序与算法。里面有很多小宏包，例如QPA:Quiver and Path algebra</li>
                 <li><a href="http://gregorybard.com/Sage.html">sage</a></li>
                 <li><a href="https://github.com/BenjaminJurke/cohomCalg">cohomCalg</a>:可以计算环面簇的层上同调。</li>
+                <li><a href="https://matrix.reshish.com/zh/">矩阵计算</a></li>
             </ul>
             <p>一些“非”数学相关程序</p>
             <ul>
