--- a/link.html
+++ b/link.html
@@ -108,7 +108,8 @@
                 <div class="acton">答案</div>
                 <div class="um_nav-btn" onclick="search('stackexchange', 'pc')">stack</div>
                 <div class="um_nav-btn" onclick="search('mathoverflow', 'pc')">mof</div>
-                <div class="um_nav-btn" onclick="search('wolframalpha_mob', 'pc')">wolfram</div>
+                <div class="um_nav-btn" onclick="search('arxiv', 'pc')">arXiv</div>
+                <div class="um_nav-btn" onclick="search('wolframalpha', 'pc')">wolfram</div>
             </div>
             <!--其他-->
             <div class="front">
