--- a/homepages.html
+++ b/homepages.html
@@ -45,6 +45,12 @@
             <div id="box1" style="display: none">
                 <h6>认识的同学、学长、助教，按入学年龄排序</h6>
                 <dl>
+                    <dt>
+                        <a onclick="openShutManager(this,'lx',false,'※',' > ')">> </a><a href="http://home.ustc.edu.cn/~cnlx/">李潇</a>
+                    </dt>
+                    <dd id="lx" style="display: none">
+                        等待更新。
+                    </dd>
 
                     <dt>
                         <a onclick="openShutManager(this,'chy',false,'※',' > ')">> </a><a href="http://home.ustc.edu.cn/~hichychen/">陈恒宇</a>
@@ -65,13 +71,13 @@
                     <dt>
                         <a href="https://toxins.github.io/">严大燊</a>
                     </dt>
-                    <dt>
+<!--                     <dt>
                         <a onclick="openShutManager(this,'sjr',false,'※','>')">> </a>
                         <a href="http://106.14.172.147/">石京儒</a>
                     </dt>
                     <dd id="sjr" style="display: none">
                         我的非常出色的高中同学，不只会学习，还会化竞、机器人、航模、编程、做网页……可以说我的许多知识都是从他那了解到的。他现在还是东华“科学商店”公众号的小编，为成百上千的同学普及科学知识。
-                    </dd>
+                    </dd> -->
 
                     <dt>
                         <a onclick="openShutManager(this,'my',false,'※',' > ')">> </a>
