--- a/recommend.html
+++ b/recommend.html
@@ -67,7 +67,7 @@
                 <li>有限域上的<a href="https://graui.de/code/ffplot/">任意平面代数曲线</a>或者<a href="https://graui.de/code/elliptic2/">椭圆曲线</a></li>
                 <li><a href="https://www.geogebra.org/m/W7dAdgqc">简单的ODE可视化</a></li>
                 <li><a href="https://www.math.uni-bielefeld.de/~wcrawley/#knitting">Auslander-Reiten quiver</a></li>
-                <li><a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/index.html">有限群</a></li>
+                <li><a href="https://people.maths.bris.ac.uk/~matyd/GroupNames/index.html">有限群</a>(关于小阶群分类的证明可以参考<a href="http://home.ustc.edu.cn/~yx3x/USTC/anonymousnotes.zip">这里</a>)</li>
                 <li><a href="http://brauer.maths.qmul.ac.uk/Atlas/v3/">有限群的表示</a></li>
                 <li><a href="http://ringtheory.herokuapp.com/">环论</a></li>
                 <li><a href="https://www.lmfdb.org/">L函数、模形式、代数数论</a></li>
