--- a/recommend.html
+++ b/recommend.html
@@ -62,7 +62,7 @@
             <ul>
                 <li><a href="https://erich-friedman.github.io/numbers.html">拉马努金式数字解释</a></li>
                 <li><a href="http://oeis.org/">特殊数列</a></li>
-                <li><a href="https://erich-friedman.github.io/packing/index.html">最密堆积相关</a>,以及<a href="https://erich-friedman.github.io/mathmagic/index.html">更多的组合</a></li>
+                <li><a href="https://erich-friedman.github.io/packing/index.html">最密堆积相关</a>(<a href="https://www.math.uni-bonn.de/people/gmartin/SeminarSS22/Programm.pdf">相关理论</a>),以及<a href="https://erich-friedman.github.io/mathmagic/index.html">更多的组合</a></li>
                 <li><a href="http://mathsci2.appstate.edu/~cookwj/sage/algebra/Euclidean_algorithm-poly.html">Euclidean算法</a></li>
                 <li>有限域上的<a href="https://graui.de/code/ffplot/">任意平面代数曲线</a>或者<a href="https://graui.de/code/elliptic2/">椭圆曲线</a></li>
                 <li><a href="https://www.geogebra.org/m/W7dAdgqc">简单的ODE可视化</a></li>
