--- a/link.html
+++ b/link.html
@@ -269,6 +269,12 @@
                                 <li><a href="https://www.math.uni-bonn.de/people/mihatsch/22%20SS/ai/">Arithmetic Intersections</a></li>
                                 <li><a href="https://people.mpim-bonn.mpg.de/scholze/Course%20Summer%2022.html">Condensed Mathematics and Complex Geometry</a></li>
                                 <li><a href="https://www.math.uni-bonn.de/ag/alggeom/veranstaltungen/ARGOS/ARGOS_SS22.pdf">Finiteness of integral Hecke algebras</a></li>
+                                ----------no official website yet
+                                <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=verpublish&status=init&vmfile=no&publishid=202775&moduleCall=webInfo&publishConfFile=webInfo&publishSubDir=veranstaltung">Arithmetic Geometry</a></li>
+                                <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=verpublish&status=init&vmfile=no&publishid=208597&moduleCall=webInfo&publishConfFile=webInfo&publishSubDir=veranstaltung">D-modules in characteristic p and applications</a></li>
+                                <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=verpublish&status=init&vmfile=no&publishid=210841&moduleCall=webInfo&publishConfFile=webInfo&publishSubDir=veranstaltung">Class Field Theory</a></li>
+                                <li><a href="https://sites.google.com/view/kwlai/teaching">Birational Geometry of Algebraic Varieties</a></li>
+                                <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=verpublish&status=init&vmfile=no&publishid=209025&moduleCall=webInfo&publishConfFile=webInfo&publishSubDir=veranstaltung">Rigid Analytic Geometry</a></li>
                                 ---------------------------------------------------------------
                                 <li><a href="https://www.dpmms.cam.ac.uk/~jf457/teaching.html">Bruhat-Tits Theory</a></li>
                                 <li><a href="http://www.math.uni-bonn.de/ag/stroppel/">Semisimple Lie algebras and their representations</a></li>
