--- a/web/English/information.html
+++ b/web/English/information.html
@@ -32,27 +32,28 @@
                 <p>My complete CV can be found <a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/CV-web.pdf">here</a>(last updated: December 12th, 2019)</p>
                 <dt>Name:</dt>
                 <dd>Xiaoxiang Zhou</dd>
-                <dt>Sex:</dt>
+                <dt>Gender:</dt>
                 <dd>male</dd>
                 <dt>Date of Birth:</dt>
                 <dd>March 9, 1999</dd>
-                <dt>Addres:</dt>
-                <dd>Room 410, Dormitory Building 4, USTC, Hefei, P.R.china</dd>
-                <dt>Postcode:</dt>
-                <dd>230026</dd>
+                <dt>Address:</dt>
+                <dd>Haus 5123, Endenicher Allee 17, 53115 Bonn, Germany</dd>
                 <dt>Telephone:</dt>
-                <dd>151****3309</dd>
+                <dd>15155923309(it has been taken back by the telecom operators) or 01744006927</dd>
                 <dt>QQ:</dt>
                 <dd>1051686409</dd>
                 <dt>E-mail:</dt>
-                <dd><a href="mailto:xx352229@mail.ustc.edu.cn">xx35229@mail.ustc.edu.cn</a></dd>
+                <dd><a href="mailto:xx352229@mail.ustc.edu.cn">xx352229@mail.ustc.edu.cn</a></dd>
                 <dt>Website:</dt>
                 <dd>home.ustc.edu.cn/~xx352229</dd>
                 <dt>Education:</dt>
-                <dd>February, 2019-June, 2019<br />
+                <dd>
+                    September, 2020-now<br />
+                    <a href="https://www.mathematics.uni-bonn.de/">Bonn University</a>
+                    February, 2019-June, 2019<br />
                     <a href="http://bicmr.pku.edu.cn/content/page/25.html">Enhanced Program for Graduate Study</a>: sponsored by <a href="http://bicmr.pku.edu.cn/">BICMR</a>
                     <br />
-                    September, 2016-NOW<br />
+                    September, 2016-June, 2020<br />
                     <a href="http://en.scgy.ustc.edu.cn/2011/0707/c7808a95251/page.htm">School of Gifted Young</a>,<a href="http://en.ustc.edu.cn/">USTC</a>
                     <br />
                     September, 2014-July, 2016<br />
