--- a/web/main/link.html
+++ b/web/main/link.html
@@ -271,11 +271,13 @@
                             <li><a href="https://people.mpim-bonn.mpg.de/scholze/Course%20Summer%2022.html">Condensed Mathematics and Complex Geometry</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/alggeom/veranstaltungen/ARGOS/ARGOS_SS22.pdf">Finiteness of integral Hecke algebras</a></li>
                             <li><a href="https://sites.google.com/view/kwlai/teaching/2022-summer-v5a4">Birational Geometry of Algebraic Varieties</a></li>
+                            <li><a href="http://www.math.uni-bonn.de/people/heuer/">Rigid Analytic Geometry</a></li>
+                            <!-- http://www.math.uni-bonn.de/people/heuer/lecture_notes.pdf -->
                             ----------no official website yet
                             <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=verpublish&status=init&vmfile=no&publishid=202775&moduleCall=webInfo&publishConfFile=webInfo&publishSubDir=veranstaltung">Arithmetic Geometry</a></li>
                             <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=verpublish&status=init&vmfile=no&publishid=208597&moduleCall=webInfo&publishConfFile=webInfo&publishSubDir=veranstaltung">D-modules in characteristic p and applications</a></li>
                             <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=verpublish&status=init&vmfile=no&publishid=210841&moduleCall=webInfo&publishConfFile=webInfo&publishSubDir=veranstaltung">Class Field Theory</a></li> 
-                            <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=verpublish&status=init&vmfile=no&publishid=209025&moduleCall=webInfo&publishConfFile=webInfo&publishSubDir=veranstaltung">Rigid Analytic Geometry</a></li>
+
                             ---------------------------------------------------------------
                             <li><a href="https://www.dpmms.cam.ac.uk/~jf457/teaching.html">Bruhat-Tits Theory</a></li>
                             <li><a href="https://www.math.uni-bonn.de/people/jacobm/s22V4A3.html">Semisimple Lie algebras and their representations</a></li>
@@ -293,9 +295,16 @@
                             <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=wtree&search=1&root120222=268089%7C266842%7C266863">Basis</a></li>
                             <li><a href="https://www.uni-bonn.de/en/studying/international-students/learning-german/sdk">German course</a></li> 
                             ---------------------------------------------------------------
+                            <li><a href="https://www.math.uni-bonn.de/ag/alggeom/veranstaltungen/veranstaltungen_ws2223.htmpl">Arithmetical Algebraic Geometry</a></li>
+                            <li><a href="https://www.math.uni-bonn.de/ag/schrstro/">Representation Theory</a></li>
+                            <li><a href="https://www.math.uni-bonn.de/ag/topo/activities.html">Topology</a></li>
+                            <li><a href="https://www.math.uni-bonn.de/ag/kompgeo/Lehre_WS_2022.htmpl">Complex Geometry</a></li>
+                            <li><a href="https://www.math.uni-bonn.de/ag/azaf/">Analytic Number Theory and Automorphic Forms</a></li>
+                            ---------------------------------------------------------------
+                            <li><a href="https://www.math.uni-bonn.de/ag/alggeom/veranstaltungen/ARGOS/ARGOS_WS2223.pdf">ARGOS</a></li>
+                            <li><a href="https://www.dpmms.cam.ac.uk/~jf457/teaching.html">Topics in Bruhat-Tits Theory</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/stroppel/">Representation Theory II</a></li>
                             <li><a href="https://www.math.uni-bonn.de/people/ja/etcoh/">Étale cohomology</a></li>
-                            <li><a href="https://www.math.uni-bonn.de/people/ivanov/">adic spaces</a></li>
                             ---------------------------------------------------------------
                             <li><a href="https://www.math.uni-bonn.de/people/schwede/V5D1-WS2223.html">Equivariant stable homotopy theory</a></li>
                             <li><a href="https://www.math.uni-bonn.de/people/schwede/EnhancedSeminar-WS2223.pdf">Enhancements of triangulated categories</a></li>
