--- a/web/main/link.html
+++ b/web/main/link.html
@@ -260,11 +260,12 @@
                             <li><a href="https://ecampus.uni-bonn.de/">eCampus</a></li>
                             <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=wtree&search=1&trex=step&root120221=253978%7C253989%7C253992&P.vx=lang">Basis</a></li>
                             <li><a href="https://www.uni-bonn.de/en/studying/international-students/learning-german/sdk">German course</a></li>
+                            <li><a href="https://mail.uni-bonn.de/">Bonn email</a></li>
                             ---------------------------------------------------------------
                             <li><a href="https://www.math.uni-bonn.de/ag/alggeom/veranstaltungen/veranstaltungen_ss22">Arithmetical Algebraic Geometry</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/schrstro/">Representation Theory</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/topo/activities.html">Topology</a></li>
-                            <li><a href="https://www.math.uni-bonn.de/ag/kompgeo/Lehre_SS_2022.htmpl">Complex Geometry</a></li>
+                            <li><a href="https://www.math.uni-bonn.de/ag/kompgeo/Lehre_WS_2223.htmpl">Complex Geometry</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/azaf/">Analytic Number Theory and Automorphic Forms</a></li>
                             ---------------------------------------------------------------
                             <li><a href="https://www.math.uni-bonn.de/people/mihatsch/22%20SS/ai/">Arithmetic Intersections</a></li>
@@ -281,7 +282,7 @@
                             ---------------------------------------------------------------
                             <li><a href="https://www.dpmms.cam.ac.uk/~jf457/teaching.html">Bruhat-Tits Theory</a></li>
                             <li><a href="https://www.math.uni-bonn.de/people/jacobm/s22V4A3.html">Semisimple Lie algebras and their representations</a></li>
-                            <li><a href="https://www.math.uni-bonn.de/~goncalve/ConwayIsGod.html">The Contributions of John H. Conway</a></li>
+                            <li><a href="https://w3.impa.br/~goncalves/conwayisgod.html">The Contributions of John H. Conway</a></li>
                             <li><a href="https://www.math.uni-bonn.de/people/gmartin/GitterKugelpackungenSS2022.htmpl">Gitter und Kugelpackungen</a></li>
                             ---------------------------------------------------------------
                             <li><a href="https://www.math.uni-bonn.de/people/schwede/at2-ss22.html">Algebraic Topology II</a></li>
