--- a/web/main/homepages.html
+++ b/web/main/homepages.html
@@ -93,18 +93,22 @@
                     <dd id="lint" style="display: none">
                         挺神的github
                     </dd> -->
-
+                    <dt><a href="https://nickteng.github.io/">滕逸恺</a></dt>
                     <dt><a href="http://home.ustc.edu.cn/~xyy0305/">徐亦尧</a></dt>
                     <dt><a href="https://zengruihan.github.io/">韩增瑞</a></dt>
                     <dt><a href="http://home.ustc.edu.cn/~cjb1998">蔡敬斌</a></dt>
-                    <dt><a href="https://nickteng.github.io/">滕逸恺</a></dt>
+                    
                     <dt><a href="https://sites.google.com/view/yshanens/">单逸</a></dt>
                     <dt><a onclick="openShutManager(this,'zzy',false,'※','>')">> </a>
                         <a href="https://www.cnblogs.com/zhuziyangcnu/?tdsourcetag=s_pcqq_aiomsg">朱子阳</a> 
                     </dt>
                     <dd id="zzy" style="display: none">这是我在北京认识的同学，他的网站里面有一些写得相对简洁的资料。
                     </dd>
-
+                    <dt><a onclick="openShutManager(this,'zq',false,'※','>')">> </a>
+                        <a href="https://qizhumath.wixsite.com/math">朱琪</a> 
+                    </dt>                    
+                    <dd id="zq" style="display: none">波恩做同伦论和范畴论的同学，课堂打latex笔记贼快，讲义也很漂亮
+                    </dd>
                     <dt><a onclick="openShutManager(this,'lhh',false,'※','>')">> </a>
                         <a href="http://home.ustc.edu.cn/~kyung/">刘浩浩学长</a> 
                     </dt>
