--- a/web/main/link.html
+++ b/web/main/link.html
@@ -260,12 +260,11 @@
                             <li><a href="https://ecampus.uni-bonn.de/">eCampus</a></li>
                             <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=wtree&search=1&trex=step&root120221=253978%7C253989%7C253992&P.vx=lang">Basis</a></li>
                             <li><a href="https://www.uni-bonn.de/en/studying/international-students/learning-german/sdk">German course</a></li>
-                            <li><a href="https://mail.uni-bonn.de/">Bonn email</a></li>
                             ---------------------------------------------------------------
                             <li><a href="https://www.math.uni-bonn.de/ag/alggeom/veranstaltungen/veranstaltungen_ss22">Arithmetical Algebraic Geometry</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/schrstro/">Representation Theory</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/topo/activities.html">Topology</a></li>
-                            <li><a href="https://www.math.uni-bonn.de/ag/kompgeo/Lehre_WS_2223.htmpl">Complex Geometry</a></li>
+                            <li><a href="https://www.math.uni-bonn.de/ag/kompgeo/Lehre_SS_2022.htmpl">Complex Geometry</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/azaf/">Analytic Number Theory and Automorphic Forms</a></li>
                             ---------------------------------------------------------------
                             <li><a href="https://www.math.uni-bonn.de/people/mihatsch/22%20SS/ai/">Arithmetic Intersections</a></li>
@@ -295,17 +294,19 @@
                             <li><a href="https://ecampus.uni-bonn.de/">eCampus</a></li>
                             <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=wtree&search=1&root120222=268089%7C266842%7C266863">Basis</a></li>
                             <li><a href="https://www.uni-bonn.de/en/studying/international-students/learning-german/sdk">German course</a></li> 
+                            <li><a href="https://mail.uni-bonn.de/">Bonn email</a></li>
                             ---------------------------------------------------------------
                             <li><a href="https://www.math.uni-bonn.de/ag/alggeom/veranstaltungen/veranstaltungen_ws2223.htmpl">Arithmetical Algebraic Geometry</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/schrstro/">Representation Theory</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/topo/activities.html">Topology</a></li>
-                            <li><a href="https://www.math.uni-bonn.de/ag/kompgeo/Lehre_WS_2022.htmpl">Complex Geometry</a></li>
+                            <li><a href="https://www.math.uni-bonn.de/ag/kompgeo/Lehre_WS_2223.htmpl">Complex Geometry</a></li>
                             <li><a href="https://www.math.uni-bonn.de/ag/azaf/">Analytic Number Theory and Automorphic Forms</a></li>
                             ---------------------------------------------------------------
                             <li><a href="https://www.math.uni-bonn.de/ag/alggeom/veranstaltungen/ARGOS/ARGOS_WS2223.pdf">ARGOS</a></li>
                             <li><a href="https://www.dpmms.cam.ac.uk/~jf457/teaching.html">Topics in Bruhat-Tits Theory</a></li>
-                            <li><a href="https://www.math.uni-bonn.de/ag/stroppel/">Representation Theory II</a></li>
+                            <li><a href="https://www.ma.imperial.ac.uk/~acaraian/">The arithmetic of the Langlands program</a></li>
                             <li><a href="https://www.math.uni-bonn.de/people/ja/etcoh/">Étale cohomology</a></li>
+                            <li><a href="https://www.math.uni-bonn.de/people/jacobm/w22V4A4.html">Representation Theory II</a></li>
                             ---------------------------------------------------------------
                             <li><a href="https://www.math.uni-bonn.de/people/schwede/V5D1-WS2223.html">Equivariant stable homotopy theory</a></li>
                             <li><a href="https://www.math.uni-bonn.de/people/schwede/EnhancedSeminar-WS2223.pdf">Enhancements of triangulated categories</a></li>
