--- a/web/main/recommend.html
+++ b/web/main/recommend.html
@@ -65,6 +65,8 @@
                 <li><a href="https://erich-friedman.github.io/numbers.html">拉马努金式数字解释</a></li>
                 <li><a href="http://oeis.org/">特殊数列</a></li>
                 <li><a href="https://erich-friedman.github.io/packing/index.html">最密堆积相关</a>(<a href="https://www.math.uni-bonn.de/people/gmartin/SeminarSS22/Programm.pdf">相关理论</a>),以及<a href="https://erich-friedman.github.io/mathmagic/index.html">更多的组合</a></li>
+                <li><a href="https://joshuahhh.com/projects/kit/">扭结识别工具</a>,以及<a href="https://linkinfo.math.indiana.edu/homelinks/knotfinder.php">KnotFinder</a></li>
+                <li><a href="https://linkinfo.sitehost.iu.edu/index.php">扭结</a>和<a href="https://linkinfo.math.indiana.edu/index.php">link</a>不变量</li>
                 <li><a href="http://mathsci2.appstate.edu/~cookwj/sage/algebra/Euclidean_algorithm-poly.html">Euclidean算法</a></li>
                 <li>有限域上的<a href="https://graui.de/code/ffplot/">任意平面代数曲线</a>或者<a href="https://graui.de/code/elliptic2/">椭圆曲线</a></li>
                 <li><a href="https://www.geogebra.org/m/W7dAdgqc">简单的ODE可视化</a></li>
@@ -77,7 +79,7 @@
                 <li><a href="https://www.mas.ncl.ac.uk/graph-curvature/">图上的曲率</a></li>
                 <li><a href="https://roywilliams.github.io/play/js/sl2z/">上半平面上SL_2(Z)作用的轨道</a></li>
                 <li><a href="https://www.lmfdb.org/">L函数、模形式、代数数论</a></li>
-                <li><a href="https://superficie.info/">代数曲面、Grassman流形、Fano簇</a></li>
+                <li><a href="https://superficie.info/">代数曲面</a>、<a href="https://www.grassmannian.info/">Grassman流形</a>、<a href="https://www.fanography.info/">Fano簇</a>、<a href="https://www.hyperkaehler.info/">hyperkähler簇</a></li>
                 <li><a href="https://www.jgibson.id.au/lievis/">Lie代数相关</a></li>
                 <li><a href="http://www.grdb.co.uk/forms/k3">K3曲面</a></li>
                 <li><a href="http://smf.compositio.nl/">Siegel模形式</a>(of deg 2 and 3)</li>
