--- a/web/main/homepages.html
+++ b/web/main/homepages.html
@@ -52,12 +52,12 @@
                         等待更新。
                     </dd>
 
-                    <dt>
+<!--                     <dt>
                         <a onclick="openShutManager(this,'chy',false,'※',' > ')">> </a><a href="http://home.ustc.edu.cn/~hichychen/">陈恒宇</a>
                     </dt>
                     <dd id="chy" style="display: none">
                         学弟的主页做的很精致。
-                    </dd>
+                    </dd> -->
                     <dt>
                         <a onclick="openShutManager(this,'tjh',false,'※',' > ')">> </a><a href="http://home.ustc.edu.cn/~tian18/">田珺昊</a>
                     </dt>
@@ -97,7 +97,7 @@
                     <dt><a href="http://home.ustc.edu.cn/~xyy0305/">徐亦尧</a></dt>
                     <dt><a href="https://zengruihan.github.io/">韩增瑞</a></dt>
                     <dt><a href="http://home.ustc.edu.cn/~cjb1998">蔡敬斌</a></dt>
-                    
+                    <dt><a href="https://xiaoweijiang-math.github.io/">江孝炜</a></dt>
                     <dt><a href="https://sites.google.com/view/yshanens/">单逸</a></dt>
                     <dt><a onclick="openShutManager(this,'zzy',false,'※','>')">> </a>
                         <a href="https://www.cnblogs.com/zhuziyangcnu/?tdsourcetag=s_pcqq_aiomsg">朱子阳</a> 
@@ -270,7 +270,7 @@
     <dd id="yqz" style="display: none">其实还是有私货的，只是我没找到就是了。椭圆曲线和代数几何座谈会是我将教授主页加入网页的最大动力。</dd>
 
     <dt><a onclick="openShutManager(this,'tg',false,'※','>')">> </a>
-        <a href="http://tian.bicmr.pku.edu.cn/Lectures_and_conferences.htm">田刚教授</a>
+        <a href="https://tian.bicmr.pku.edu.cn/">田刚教授</a>
     </dt>
     <dd id="tg" style="display: none">我们可以将讲义名称复制粘贴一下，就能在网上找到了哈！</dd>
 
@@ -298,7 +298,7 @@
 
 </dl>
 
-<h6>从清华数学系“偷来”的主页。想要了解更多，请点击<a href="http://www.math.tsinghua.edu.cn/publish/math/7009/index.html">这里</a>。</h6>
+<!-- <h6>从清华数学系“偷来”的主页。想要了解更多，请点击<a href="http://www.math.tsinghua.edu.cn/publish/math/7009/index.html">这里</a>。</h6>
 <dl>
     <dt><a onclick="openShutManager(this,'zyj',false,'※','>')">> </a>
         <a href="http://faculty.math.tsinghua.edu.cn/~yzhang/">张友金教授</a>
@@ -320,7 +320,7 @@
         <a href="http://faculty.math.tsinghua.edu.cn/~mzhang/MyHome.htm">章梅荣教授</a>
     </dt>
     <dd id="zmr" style="display: none">和某神一样，中文版有私货。“<a href="http://faculty.math.tsinghua.edu.cn/~mzhang/oth/msdr.htm">人才培养</a>”中有微积分和动力系统的课程资料（某本动力系统书的中译版），以及动力系统与微分方程(DS&DE)的讨论班和学术报告。</dd>
-</dl>
+</dl> -->
 <h6>我从中学到了很多</h6>
 <dl>
     <dt><a onclick="openShutManager(this,'cyt',false,'※','>')">> </a>
