--- a/web/main/link.html
+++ b/web/main/link.html
@@ -303,6 +303,8 @@
                             <li><a href="https://www.math.uni-bonn.de/ag/azaf/">Analytic Number Theory and Automorphic Forms</a></li>
                             ---------------------------------------------------------------
                             <li><a href="https://www.math.uni-bonn.de/ag/alggeom/veranstaltungen/ARGOS/ARGOS_WS2223.pdf">ARGOS</a></li>
+                            <li><a href="https://www.ma.imperial.ac.uk/~acaraian/alp.pdf">The arithmetic of the Langlands program</a></li>
+                            <li><a href="https://people.mpim-bonn.mpg.de/scholze/Course%20Winter%202223.html">Six Functor Formalisms</a></li>
                             <li><a href="https://www.dpmms.cam.ac.uk/~jf457/teaching.html">Topics in Bruhat-Tits Theory</a></li>
                             <li><a href="https://www.ma.imperial.ac.uk/~acaraian/">The arithmetic of the Langlands program</a></li>
                             <li><a href="https://www.math.uni-bonn.de/people/ja/etcoh/">Étale cohomology</a></li>
