--- a/web/main/recommend.html
+++ b/web/main/recommend.html
@@ -79,12 +79,13 @@
                 <li><a href="https://www.mas.ncl.ac.uk/graph-curvature/">图上的曲率</a></li>
                 <li><a href="https://roywilliams.github.io/play/js/sl2z/">上半平面上SL_2(Z)作用的轨道</a></li>
                 <li><a href="https://www.lmfdb.org/">L函数、模形式、代数数论</a></li>
-                <li><a href="https://superficie.info/">代数曲面</a>、<a href="https://www.grassmannian.info/">Grassman流形</a>、<a href="https://www.fanography.info/">Fano簇</a>、<a href="https://www.hyperkaehler.info/">hyperkähler簇</a></li>
+                <li><a href="https://superficie.info/">代数曲面</a>、<a href="https://www.grassmannian.info/">Grassman流形</a>、<a href="https://www.fanography.info/">Fano簇</a>、<a href="https://www.hyperkaehler.info/">hyperkähler簇</a>、<a href="https://mgnbar.info/">模空间</a></li>
                 <li><a href="https://www.jgibson.id.au/lievis/">Lie代数相关</a></li>
                 <li><a href="http://www.grdb.co.uk/forms/k3">K3曲面</a></li>
                 <li><a href="http://smf.compositio.nl/">Siegel模形式</a>(of deg 2 and 3)</li>
                 <li><a href="https://web.math.pmf.unizg.hr/~duje/">高秩椭圆曲线记录</a></li>
                 <li><a href="https://categoricalexamples.math.leidenuniv.nl/search.php">自动搜索器</a>:范畴相关的例子</li>
+                <li><a href="https://www.forkinganddividing.com/">模型论地图</a></li>
 
 
 
@@ -109,6 +110,7 @@
                 <li><a href="https://www.gap-system.org/index.html">GAP</a>:群，程序与算法。里面有很多小宏包，例如QPA:Quiver and Path algebra</li>
                 <li><a href="http://gregorybard.com/Sage.html">sage</a></li>
                 <li><a href="https://github.com/BenjaminJurke/cohomCalg">cohomCalg</a>:可以计算环面簇的层上同调。</li>
+                <li><a href="https://www.singsurf.org/">Online Curve and Surface programs</a></li>
                 <li><a href="https://matrix.reshish.com/zh/">矩阵计算</a></li>
             </ul>
             <p>一些“非”数学相关程序</p>
@@ -148,6 +150,7 @@
             <h2>讲义</h2>
             <ul>
                 <li><a href="https://pad.riseup.net/p/mathlinksbonn">Bonn讲义</a></li>
+                <li><a href="https://www.imaginary.org/snapshots">snapshots</a>:带图片的科普文章</li>
                 <li><a href="https://www.timo-keller.de/dokuwiki/KleineAG.html">Kleine AG</a>:介绍代数几何中的一些小主题。</li>
                 <li>知乎上的推荐<a href="https://www.zhihu.com/question/38253477/answer/287259056">讲义</a></li>
                 <li>stackexchange上的推荐<a href="https://math.stackexchange.com/questions/302023/best-sets-of-lecture-notes-and-articles">Lecture Notes</a></li>
