--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             <input id="search-mobile" type="text" placeholder="wiki...">
         </form>
         <ul>
-            <li><a href="web/English/information.html">CV</a></li>
             <li><a href="web/English/toynotes-Eng.html">Notes</a></li>
             <li><a class="active">homepage</a></li>
             <li><a href="index-Chi.html">中文</a></li>
@@ -47,7 +46,8 @@
         <div class="rich_media_inner"> 
             <p>Welcome to Xiaoxiang's homepage! In this homepage, you're welcomed to see my notes <a href="web/English/toynotes-Eng.html">here</a>.</p>
             <p>Some informations about the "<a href="web/main/newprogram.html">eine Woche, ein Beispiel</a>".</p>
-            <p>I don't know what should I put in the homepage. Sometimes I just make it a little different.</p>
+            <p>My complete CV can be found <a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/CV-web.pdf">here</a> (last updated: Feb 16th, 2023)</p>
+         
         </div>
         <div class="center"><canvas id="c"></canvas></div>
     </main>
