--- a/web/English/toynotes-Eng.html
+++ b/web/English/toynotes-Eng.html
@@ -31,9 +31,8 @@
             <input id="search-mobile" type="text" placeholder="wiki...">
         </form>
         <ul>
-            <li><a href="information.html">CV</a></li>
             <li><a class="active">Notes</a></li>
-            <li><a href="../../index-Eng.html">homepage</a></li>
+            <li><a href="../../index.html">homepage</a></li>
             <li><a href="../../index-Chi.html">中文</a></li>
         </ul>
     </nav>
@@ -43,7 +42,8 @@
             <h6>Document written in English</h6>
             <dl>
                 <dt><a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/latex/math/English/The Equivariant Tubular Neighborhood Theorem.pdf">《The Equivariant Tubular Neighborhood Theorem》</a></dt>
-                <dd>This is the final project for manifold course. In this article, I introduce the necessary tools and prove the equivariant tubular neighborhood theorem from the simplest case to the most general case.</dd>
+                <dd>This is the final project for manifold course. In this article, I introduce the necessary tools and prove the equivariant tubular neighborhood theorem from the simplest case to the most general case.
+</dd>
                 <dt><a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/latex/math/English/Schur-Horn theorem notes.pdf">《Schur-Horn theorem》</a></dt>
                 <dd>This is the final project for Hua-seminar course. In this article, we state the Schur-Horn theorem, a amazing theorem in Linear Algebra. Instead of using the techniques in Linear Algebra, we introduce the Atiyah-Guillemin-Sternberg convexity theorem from the field of symplectic geometry, and after that we prove the Schur-Horn theorem as a corollary.</dd>
                 <dt><a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/latex/math/English/Schur-Weyl duality.pdf">《Schur-Weyl duality》</a></dt>
