--- a/web/main/link.html
+++ b/web/main/link.html
@@ -348,7 +348,7 @@
 
         <ol>
             <li><a href="../English/toynotes-Eng.html">个人的数学材料</a>、<a href="../outofmath/subject2.html">其他的学科内容</a>（主要是物理、英语、网页制作）和<a href="../outofmath/subject.html">latex</a></li>
-            <li><a href="https://home.ustc.edu.cn/~xx352229/">返回主页</a></li>
+            <li><a href="http://home.ustc.edu.cn/~xx352229/">返回主页</a></li>
             <li><a href="https://kfd.me/">中文维基镜像</a></li>
         </ol>
         <p>科大的链接集锦已有许多，其中<a href="http://ustc.life/">USTC导航</a>相当全面，页面简洁；<a href="https://sqrt-1.me/?p=282">网页资源一览</a>对科大的所有资源已做了详细介绍，故不撰述。以下仅供个人书签使用。另外有一些补充的信息：<a href="http://mp.weixin.qq.com/s/BOEN_WTOIWuEaV6PVIKnxA">USTC实用电话簿</a>、<a href="http://mp.weixin.qq.com/s/jfXJTbXcMRhKp_DoqZ8wpw">蜗壳周边医院小汇总</a>、<a href="https://tieba.baidu.com/p/4103009987">校园常用链接一览</a>，平时无用，但偶尔亦有其作用。</p>
