--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <h4>School of Mathematical Sciences, USTC</h4>
         <hr />
         <div class="rich_media_inner"> 
-            <p>Welcome to Xiaoxiang's homepage! In this homepage, you're welcomed to see my notes <a href="web/English/toynotes-Eng.html">here</a>.</p>
-            <p>Some informations about the "<a href="web/main/newprogram.html">eine Woche, ein Beispiel</a>".</p>
+            <p>Welcome to Xiaoxiang's homepage! In this homepage, you're welcomed to see my notes in <a href="https://github.com/ramified">GitHub</a> or <a href="web/English/toynotes-Eng.html">here(bachelor works)</a>.</p>
+            <p>My <a href="https://github.com/ramified/master_thesis/blob/main/master_thesis_Xiaoxiang_Zhou.pdf">master thesis</a> and preprint: <a href="https://arxiv.org/abs/2206.00444">Affine Pavings of Quiver Flag Varieties</a>.</p>
+            <p>Some informations about the "<a href="web/main/newprogram.html">eine Woche, ein Beispiel</a>". </p>
             <p>My complete CV can be found <a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/CV-web.pdf">here</a> (last updated: Feb 16th, 2023)</p>
-         
         </div>
         <div class="center"><canvas id="c"></canvas></div>
     </main>
