--- a/web/main/newprogram.html
+++ b/web/main/newprogram.html
@@ -25,7 +25,7 @@
         <ul>
             <li><a href="http://home.ustc.edu.cn/~xx352229/web/English/information.html">CV</a></li>
             <li><a href="http://home.ustc.edu.cn/~xx352229/web/English/toynotes-Eng.html">Notes</a></li>
-            <li><a href="http://home.ustc.edu.cn/~xx352229/index-Eng.html">homepage</a></li>
+            <li><a href="http://home.ustc.edu.cn/~xx352229/index.html">homepage</a></li>
             <li><a href="http://home.ustc.edu.cn/~xx352229/index-Chi.html">中文</a></li>
         </ul>
     </nav>
