--- a/web/main/newprogram.html
+++ b/web/main/newprogram.html
@@ -51,6 +51,7 @@
                     <li><a onclick="openShutManager(this,'box2',false)">Langlands program</a>
                         <div id="box2" style="display: none">
                             <ul>
+                                <li><a href="https://github.com/ramified/personal_handwritten_collection/tree/main/Langlands">Langlands</a> prepared for the exam</li>
                                 <li>Field
                                     <ul>
 
