--- a/web/main/recommend.html
+++ b/web/main/recommend.html
@@ -115,6 +115,8 @@
             </ul>
             <p>一些“非”数学相关程序</p>
             <ul>
+                <li><a href="https://chat.openai.com/chat">ChatGPT</a></li>
+                <li><a href="https://huggingface.co/spaces/Hello-SimpleAI/chatgpt-detector-qa">ChatGPT detectors</a></li>
                 <li><a href="https://100audio.com/sound/100audio_editor/">在线音频编辑器</a></li>
                 <li><a href="https://gchq.github.io/CyberChef/">码农常用工具</a></li>
                 <li><a href="http://gridzzly.com/">生成格子纸</a></li>
