--- a/web/main/recommend.html
+++ b/web/main/recommend.html
@@ -97,6 +97,7 @@
                 <li><a href="http://www.map.mpim-bonn.mpg.de/Main_Page">流形</a></li>
                 <li><a href="http://www.liegroups.org/">Lie群和其表示</a></li>
                 <li><a href="https://subwiki.org/wiki/Main_Page">wiki上的atlas</a></li>
+                <li><a href="https://kskedlaya.org/cft/frontmatter-1.html">类域论讲义</a></li>
                 <li><a href="https://www.williamstein.org/Tables/">模形式</a></li>
                 <li><a href="https://ncag.info/index.html">非交换代数几何</a></li>
                 <li><a href="https://kerodon.net/">kerodon</a>:无穷范畴版本的stack project</li>
@@ -120,6 +121,7 @@
                 <li><a href="https://100audio.com/sound/100audio_editor/">在线音频编辑器</a></li>
                 <li><a href="https://gchq.github.io/CyberChef/">码农常用工具</a></li>
                 <li><a href="http://gridzzly.com/">生成格子纸</a></li>
+                <li><a href="https://pretextbook.org/">PreTeXt</a>:数学书籍网页版最佳范式</li>
                 <li><a href="https://www.latexlive.com/##">在线latex编辑器</a></li>
                 <li><a href="https://q.uiver.app/">quiver</a> and <a href="https://tikzcd.yichuanshen.de/">tikzcd-editor</a></li>
                 <li><a href="https://tikzit.github.io/">tikzIT</a>:tikz画图脚本</li>
